[gd_scene load_steps=6 format=3 uid="uid://dnlcsl0h4mgpy"]

[ext_resource type="PackedScene" uid="uid://6orar16yxpcb" path="res://scenes/firefly_player.tscn" id="1_g661c"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_iwp0e"]
[ext_resource type="PackedScene" uid="uid://sng1scnr7o3y" path="res://scenes/light_projectile.tscn" id="2_vrx3n"]
[ext_resource type="PackedScene" uid="uid://bm7erg8awbr51" path="res://scenes/glow_bar.tscn" id="5_v25io"]

[sub_resource type="Curve2D" id="Curve2D_lptqb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 648, 984, 0, 0, 0, 0, 0, 984, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_iwp0e")
light_scene = ExtResource("2_vrx3n")

[node name="FireflyPlayer" parent="." instance=ExtResource("1_g661c")]
position = Vector2(3, 11)

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="LightBarNode" parent="." instance=ExtResource("5_v25io")]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(331, 425)

[node name="Orbs" type="Node2D" parent="."]

[node name="LightSpawn1" type="Marker2D" parent="Orbs"]
position = Vector2(286, 119)

[node name="LightSpawn2" type="Marker2D" parent="Orbs"]
position = Vector2(501, 789)

[node name="LightSpawn3" type="Marker2D" parent="Orbs"]
position = Vector2(559, 572)

[node name="LightSpawn4" type="Marker2D" parent="Orbs"]
position = Vector2(82, 557)

[node name="LightSpawn5" type="Marker2D" parent="Orbs"]
position = Vector2(126, 298)

[node name="LightSpawn6" type="Marker2D" parent="Orbs"]
position = Vector2(514, 242)

[node name="LightSpawn7" type="Marker2D" parent="Orbs"]
position = Vector2(258, 723)

[node name="LightPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lptqb")

[node name="LightSpawnLocation" type="PathFollow2D" parent="LightPath"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.201527, 0.201527, 0.201527, 1)

[connection signal="light_contact" from="FireflyPlayer" to="." method="_on_firefly_player_light_contact"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="bar_level" from="LightBarNode" to="." method="_game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
